# opengl-project

./: .gitignore  CMakeLists.txt  G_CameraMgr.cpp  G_CameraMgr.h  G_InputMgr.cpp  G_InputMgr.h  G_InstanceMgr.cpp  G_InstanceMgr.h  G_Lights.cpp  G_Lights.h  G_ModelMgr.cpp  G_ModelMgr.h  G_Renderer.cpp  G_Renderer.h  G_Scene.cpp  G_Scene.h  G_TerrainMgr.cpp  G_TerrainMgr.h  G_WindowMgr.cpp  G_WindowMgr.h  README.md  common.hpp  common_struct.hpp  default_fbo_technique.cpp  default_fbo_technique.h  main.cpp  model_path.hpp  opengl_project.sln  opengl_project.vcxproj  opengl_project.vcxproj.filters  program_log.txt  terrain_path.hpp
dependency/ogldev/: ogldev_math_3d.h  ogldev_texture.cpp  ogldev_util.cpp  stb_image.cpp
